ui: fixed squashed Combobox and pick both files and directories in QtDirectoryListBox

--- a/bin/app/data/gui/project_wizzard/window.css
+++ b/bin/app/data/gui/project_wizzard/window.css
@@ -32,6 +32,11 @@
 #formArea {
 	background: white;
 	border: none;
+}
+
+#scrollArea {
+	background: white;
+	border: none;
 	border-top: 1px solid lightgrey;
 	border-bottom: 1px solid lightgrey;
 }
