--- a/bin/app/data/gui/setting_window/listbox.css
+++ b/bin/app/data/gui/setting_window/listbox.css
@@ -71,5 +71,5 @@ QtListItemWidget #field {
 }
 
 #dropInfo {
-	color: lightgray;
+	color: #999;
 }
